--- a/7Parametors/7Parametors.csproj
+++ b/7Parametors/7Parametors.csproj
@@ -3,12 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <RootNamespace>_7Parametors</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NewOne\NewOne.csproj" />
-  </ItemGroup>
 
 </Project>
